Refactor command target resolution to enforce single target selection and enhance selector utility for improved command handling