@@ -97,27 +97,18 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
                     return true;
                 }
                 String warpName = args[0];
-                List<Entity> targets = SelectorUtil.resolveSelector(sender, args[1], true);
-                if (targets.isEmpty()) {
-                    plugin.message.sendMessage(sender, "player_not_found");
-                    return true;
-                }
-                for (Entity e : targets) {
-                    if (!(e instanceof Player)) continue;
-                    Player target = (Player) e;
+                Player target = Bukkit.getPlayer(args[1]);
+                Warp warp = new Warp(target, warpName);
+                Replacements replacements = new Replacements.Builder()
+                        .add("<NAME>", warpName)
+                        .add("<PLAYER>", getDisplayName(target))
+                        .build();
 
-                    Warp warp = new Warp(target, warpName);
-                    Replacements replacements = new Replacements.Builder()
-                            .add("<NAME>", warpName)
-                            .add("<PLAYER>", getDisplayName(target))
-                            .build();
-
-                    if (!plugin.config.warps.containsLowercase(warpName)) {
-                        plugin.config.warps.set(warpName, warp);
-                        plugin.message.sendMessage(player, "setwarp_success_other", replacements);
-                    } else {
-                        plugin.message.sendMessage(player, "setwarp_already_exists_other", replacements);
-                    }
+                if (!plugin.config.warps.containsLowercase(warpName)) {
+                    plugin.config.warps.set(warpName, warp);
+                    plugin.message.sendMessage(player, "setwarp_success_other", replacements);
+                } else {
+                    plugin.message.sendMessage(player, "setwarp_already_exists_other", replacements);
                 }
                 return true;
             }
@@ -233,6 +224,64 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
                 }
                 return true;
             }
+
+            // /warp <name> <selector>  (executor pays; teleport targets)
+            if (args.length == 2) {
+                if (!sender.hasPermission("lyttleessentials.warp.others")) {
+                    plugin.message.sendMessage(sender, "no_permission");
+                    return true;
+                }
+
+                String warpName = args[0];
+                if (!plugin.config.warps.contains(warpName)) {
+                    Replacements repl = new Replacements.Builder()
+                            .add("<NAME>", warpName)
+                            .build();
+                    plugin.message.sendMessage(player, "warp_doesnt_exist", repl);
+                    return true;
+                }
+
+                ConfigurationSection warpSection = plugin.config.warps.getSection(warpName);
+                if (warpSection == null) {
+                    plugin.message.sendMessage(player, "warp_doesnt_exist");
+                    return true;
+                }
+                Warp warp = new Warp(warpSection);
+                Location location = warp.location;
+
+                List<Entity> targets = SelectorUtil.resolveSelector(player, args[1], true);
+                if (targets.isEmpty()) {
+                    plugin.message.sendMessage(player, "player_not_found");
+                    return true;
+                }
+
+                for (Entity e : targets) {
+                    if (!(e instanceof Player)) continue;
+                    Player t = (Player) e;
+
+                    Bill bill = plugin.invoice.teleportToWarp(player);
+                    if (bill.total < 0) {
+                        plugin.message.sendMessage(player, "tokens_missing");
+                        return true;
+                    }
+
+                    t.teleport(location);
+
+                    Replacements rSender = new Replacements.Builder()
+                            .add("<TARGET>", getDisplayName(t))
+                            .add("<NAME>", warpName)
+                            .add("<PRICE>", String.valueOf(bill.total))
+                            .build();
+                    Replacements rTarget = new Replacements.Builder()
+                            .add("<PLAYER>", getDisplayName(player))
+                            .add("<NAME>", warpName)
+                            .build();
+
+                    plugin.message.sendMessage(player, "warp_teleported_other_sender", rSender);
+                    plugin.message.sendMessage(t, "warp_teleported_target", rTarget);
+                }
+                return true;
+            }
         }
 
         return true;
@@ -240,32 +289,15 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] arguments) {
-        String name = command.getName().toLowerCase();
-        if (name.equals("warp")) {
-            if (arguments.length == 1) {
-                String[] warps = plugin.config.warps.getKeys("");
-                return Arrays.asList(warps);
-            }
-            return List.of();
+        if (arguments.length == 1) {
+            String[] warps = plugin.config.warps.getKeys("");
+            return Arrays.asList(warps);
         }
 
-        if (name.equals("setwarp")) {
-            if (arguments.length == 1) {
-                return List.of(); // warp name free text
-            }
+        if (sender.hasPermission("lyttleessentials.warp.others")) {
             if (arguments.length == 2) {
                 return SelectorUtil.selectorCompletions(arguments[1]);
             }
-            return List.of();
-        }
-
-        if (name.equals("delwarp")) {
-            if (arguments.length == 1) {
-                String[] warps = plugin.config.warps.getKeys("");
-                return Arrays.asList(warps);
-            }
-            // Optional other-player arg not selector-enabled here (legacy path)
-            return List.of();
         }
 
         return List.of();
